--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,50 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+html, body {
+    margin:0 !important;
+    padding:0 !important;
+    height: 100%;
+
 }
 
-a {
-  color: #00B7FF;
+.pageheader {
+    width: 100%;
+    height: 8%;
+    background-color: #eea236;
+}
+
+.pageheader h1 {
+    padding-top:1%;
+    padding-left:1%;
+    margin:0;
+}
+
+.main {
+    height: 82%;
+}
+
+
+.main .background {
+    height: 100%;
+    background-image: url(../images/grad-home.jpg);
+    background-size: cover;
+    opacity: 0.7;
+}
+
+.main .background h1 {
+    margin: 0;
+    padding-left: 30%;
+    font-family: "New Peninim MT";
+    font-size: 400%;
+    color: darkblue;
+}
+
+
+footer {
+    height: 10%;
+    background-color: #eea236;
+}
+
+footer p {
+    margin: 0;
+    padding: 10px;
+    color: antiquewhite;
 }
