Nikita's 1st commmit - Changed print statement in home.jade

--- a/app_server/views/home.jade
+++ b/app_server/views/home.jade
@@ -2,7 +2,7 @@ extends layout
 
 block header
     .pageheader
-        h1 Welcome to GradWorld
+        h1 Welcome to MyGradWorld
 block content
     .main
         .background
