--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -3,6 +3,7 @@ html
   head
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block header
@@ -12,5 +13,5 @@ html
       footer
           p
             | Copyright &copy; 2016 | Terms and Conditions
-    script(src='/javascripts/jquery-3.0.0.min.js')
-    script(src="https://code.jquery.com/jquery-2.2.4.min.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
+    script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js")
