2nd commit - Added signup page as Counsellor

--- a/app_server/views/home.jade
+++ b/app_server/views/home.jade
@@ -4,7 +4,7 @@ block header
     .pageheader
         .container
             #heading
-                h1 Welcome to MyGradWorld
+                h1 MyGradWorld
             #login-form
                 input(type="text", id="login-email", placeholder="Email", autofocus="autofocus")
                 input(type="password" id="login-password" placeholder="Password")
