--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -9,6 +9,8 @@ html
     block header
       .pageheader
     block content
+    .sidebar
+     block sidebar
     block footer
       footer
           p
