--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -44,6 +44,36 @@ html, body {
     white-space: nowrap;
 }
 
+.sidebar {
+    float: center;
+    width: 500px;
+}
+
+.sidebar .widget {
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    border: 2px solid #ccc;
+    margin-left: 100px;
+    background-color: #FFE4E1;
+    -webkit-box-shadow: inset 0px 0px 0px 3px rgba(255,255,255,0.8), 0px 3px 0px -2px rgba(0,0,0,0.1);
+    box-shadow: inset 0px 0px 0px 3px rgba(255,255,255,0.8), 0px 3px 0px -2px rgba(0,0,0,0.1);
+}
+
+.sidebar .widget h1 {
+    font-family: 'Quicksand';
+    margin: 13px 10px 4px;
+    padding-bottom: 10px;
+    border-bottom: 1px dotted #ddd;
+    -webkit-border-radius: 2px 2px 0px 0px;
+    border-radius: 2px 2px 0px 0px;
+    margin-bottom: 10px;
+}
+
+.sidebar .widget p {
+    font-size: 13px;
+    padding: 0px 10px;
+    margin-bottom: 10px;
+}
 
 footer {
     height: 10%;
