--- a/app_server/views/activity.jade
+++ b/app_server/views/activity.jade
@@ -23,3 +23,5 @@ block content
                     option(value=i) #{item}
             button(class="btn").
                 Complete-Setup
+            a(href='/logout', class="btn btn-default btn-sm").
+                Logout
