--- a/app_server/views/home.jade
+++ b/app_server/views/home.jade
@@ -6,9 +6,10 @@ block header
             #heading
                 h1 MyGradWorld
             #login-form
-                input(type="text", id="login-email", placeholder="Email", autofocus="autofocus")
-                input(type="password" id="login-password" placeholder="Password")
-                input(type="submit" name="submit" value="Sign In")
+                form(action="/", method="post")
+                    input(type="text", id="login-email", placeholder="Email", autofocus="autofocus", name="email")
+                    input(type="password" id="login-password" placeholder="Password", name="password")
+                    input(type="submit" name="submit" value="Sign In")
 block content
     .main
         .background
