--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -1,9 +1,8 @@
 doctype html
-html
+html(ng-app="grad-world")
   head
     meta(name='viewport', content='width=device-width, initial-scale=1')
     title= title
-    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block header
@@ -17,3 +16,6 @@ html
             | Copyright &copy; 2016 | Terms and Conditions
     script(src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js")
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css")
+    script(src="/angular/angular.min.js")
+    script(src="/angular/angular-home.js")
