--- a/app_server/views/home.jade
+++ b/app_server/views/home.jade
@@ -8,7 +8,7 @@ block header
                     .col-lg-2
                         h1 MyGradWorld
                 #login-form
-                    form(action="/", method="post", ng-controller="homelogin")
+                    form(action="/", method="post")
                         input(type="text", id="login-email", placeholder="Email", autofocus="autofocus", name="email")
                         input(type="password" id="login-password" placeholder="Password", name="password")
                         input(type="submit" name="submit" value="Sign In")
