--- a/app_server/views/layout.jade
+++ b/app_server/views/layout.jade
@@ -18,4 +18,5 @@ html(ng-app="grad-world")
     script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js")
     link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css")
     script(src="/angular/angular.min.js")
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.1.4/ui-bootstrap-tpls.min.js")
     script(src="/angular/angular-home.js")
